# liuzhou

./: .gitignore  AGENT.md.bak  AGENTS.md  Agent.md  MEMORY.md  Makefile  Proj_share.md  README.md  README_TESTS.md  README_zh.md  TEST_README.md  TEST_SUMMARY.md  TODO.md  TRAINING_STABILITY.md  anal.md  cursor_ddp_nccl_timeout_analysis_and_co.md  cursor_training_stability_and_reward_op.md  env_readme.md  pytest.ini  rewrite.md  rule_description.md  run.py  run_tests.py  temp_ps_script.ps1  test_self_play.py  tmp_encoding_compare.py  tmp_mcts_debug.py  tmp_policy_compare.py  tmp_sim_compare.py  六洲棋规则.txt  六洲棋规则（综合版）.txt
archive/pm/: pm_next_step_value_system_alignment_20260309.md
backend/: __init__.py  game_manager.py  main.py  model_loader.py  schemas.py  static_files.py  utils.py
checkpoints_eval_run/: training_metrics.json
docs/: architecture.md  complexity_estimation.md  faq.md  faq_answers.md  gameplay_system.md  index.md  legacy_tensor_pipeline.md  method.md  p1_inference_engine.md  quickstart.md  results.md  rules.md
docs/presentation/: liuzhou-mcts-projshare.md
logs/: kill_top_io.nohup
rollback_090640_smoke_full/summary/: cases.tsv
rollback_090640_smoke_subset/summary/: cases.tsv
scripts/: big_train_v1.sh  build_portable_cpp.py  cleanup_after_migration.sh  delayed_train.sh  eval_checkpoint.py  export_torchscript.py  filter_decisive_jsonl.py  fix_draw_collapse.sh  fresh5filter.sh  instruct.sh  instruction.sh  kill_top_io.sh  large_scale_train.sh  local_train_v1_3iter.ps1  long_train_portable_mps.py  monitor_resources.sh  monitor_train_bottleneck.sh  optimized_train.sh  parallel_generate.sh  regress_090640_params.sh  run_long_train_mps.sh  run_vloss_blackbox.sh  tournament_v1_eval.py  toy_train.sh  toy_train_v1.sh  train_entry.py  train_loop.py  train_loop.sh  validate_v1_gpu.cmd  verify_migration.sh
src/: evaluate.py  game_state.py  mcts.py  move_generator.py  neural_network.py  policy_batch.py  random_agent.py  rule_engine.py  test_random_agent_debug.py  test_random_agent_enhanced.py  train.py
tests/: __init__.py  check_rule_engine_cases.py  conftest.py  test_backend_gameplay.py  test_batched_policy_loss.py  test_benchmark_portable_eval_budget.py  test_eval_checkpoint_reproducibility.py  test_game_state_phase_gate.py  test_long_train_portable_mps.py  test_mcts.py  test_value_bucket_encoding.py
tests/accuracy/: __init__.py  test_v0_actions.py  test_v0_mcts.py  test_v0_state_batch.py
tests/cross_check/: __init__.py
tests/cuda/: __init__.py  test_fast_apply_moves_cuda.py  test_fast_legal_mask_cuda.py
tests/integration/: __init__.py  test_self_play.py
tests/legacy/: __init__.py  test_mcts.py  test_self_play.py
tests/random_agent/: README.md  __init__.py  run_tests.py  test_random_agent_debug.py  test_random_agent_enhanced.py
tests/unit/: __init__.py  test_mcts.py  test_rule_engine.py
tests/v0/: __init__.py  check_v0_policy_index_alignment.py  test_actions.py  test_mcts.py  test_state_batch.py  test_torchscript_forward.py
tests/v1/: __init__.py  test_encoding_compat.py  test_fast_apply_moves.py  test_fast_apply_moves_performance.py  test_move_encoder.py  test_policy_projection.py  test_policy_projection_fast_accuracy.py  test_policy_projection_fast_performance.py  test_portable_cpp_mcts.py  test_portable_mcts.py  test_scaffold.py  test_self_play_runner.py  test_state_batch.py  test_tensor_utils.py  test_train_pipeline.py  test_v1_tensor_pipeline_smoke.py  test_vectorized_mcts.py
tmp/: run_local_6iter96_seed123.py  run_local_6iter96_seed123_20260221_142318.py  run_local_6iter96_seed123_20260221_142404.py  selfplay_sweep_sims_torchenv.py  selfplay_sweep_torchenv.py
tools/: __init__.py  _probe_v1_gpu.py  _probe_v1_gpu_oldsig.py  ab_portable_search.py  ab_v1_child_value_only.py  ab_v1_finalize_graph_capture.py  analyze_node_cache.py  benchmark_apply_moves.py  benchmark_cuda.py  benchmark_eval_batcher.py  benchmark_inference_engine.py  benchmark_legal_mask.py  benchmark_mcts.py  benchmark_policy_projection.py  benchmark_portable_cpp.py  benchmark_portable_eval_budget.py  benchmark_root_puct_op.py  benchmark_self_play.py  benchmark_torchscript_forward.py  check_v0_actions_all.py  cross_check_mcts.py  cross_check_policy_projection.py  get_thread.py  inspect_selfplay_payload_finite.py  nsys_v0_v1_compare.py  profile_self_play_gpu.py  run_selfplay_workload.py  run_test_matrix.py  run_v1_acceptance_suite.py  smoke_v0_bottleneck.py  smoke_v1_gpu_pipeline.py  smoke_v1_portable.py  sweep_v1_gpu_matrix.py  validate_v1_claims.py  verify_multi_ply.py  verify_v0_mcts.py  verify_v0_state_batch.py
v0/: CMakeLists.txt  TODO.md  cpprefactor.md  generate_data.py  make_readme.md  move_generator_reference.py  rule_engine_reference.py  train.py  v0_pipeline_notes.md
v0/data/self_play/: self_play_20251227_153354.jsonl
v0/include/v0/: eval_batcher.hpp  fast_apply_moves.hpp  fast_legal_mask.hpp  game_state.hpp  inference_engine.hpp  mcts_core.hpp  move_generator.hpp  net_encoding.hpp  project_policy.hpp  root_puct_fused.hpp  rule_engine.hpp  tensor_state_batch.hpp  torchscript_runner.hpp
v0/python/: __init__.py  fast_legal_mask.py  mcts.py  move_encoder.py  move_generator.py  rules_tensor.py  self_play_runner.py  state_batch.py  state_io.py  tensor_utils.py
v0/src/: CMakeLists.txt
v0/src/bindings/: module.cpp
v0/src/game/: fast_apply_moves.cpp  fast_apply_moves_cuda.cu  fast_legal_mask.cpp  fast_legal_mask_common.hpp  fast_legal_mask_cuda.cu  game_state.cpp  tensor_state_batch.cpp
v0/src/mcts/: eval_batcher.cpp  mcts_core.cpp  root_puct_fused.cu
v0/src/moves/: move_generator.cpp
v0/src/net/: encoding.cpp  inference_engine.cpp  project_policy_logits_fast.cpp  torchscript_runner.cpp
v0/src/rules/: rule_engine.cpp
v0/tests/: test_fast_apply_moves_cuda.py  test_fast_legal_mask_cuda.py
v0/tools/: benchmark_v0_cuda.py
v1/: Design.md  README.md  __init__.py  train.py
v1/common/: __init__.py  tensor_utils.py
v1/cpp/: portable_mcts.cpp
v1/game/: __init__.py  fast_apply_moves.cpp  (+6 more)
web_ui/: README.md  app.js  index.html  styles.css
(+36 files in other folders)
